Kubernetes_MarketScraper/main-web-app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketscraper-web
  namespace: marketscraper
spec:
  selector:
    app: marketscraper-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
