Kubernetes_MarketScraper/main-web-app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketscraper-ingress
  namespace: marketscraper
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketscraper-web
                port:
                  number: 80
